# tg_book

./: .gitignore  README.md  manage.py  pyproject.toml
conf/: .env.template  settings.py  urls.py
parser_books/: __init__.py  admin.py  books.json  forms.py  helper.py  mixins.py  models.py  parser.py  serializers.py  urls.py  views.py
parser_books/migrations/: 0001_initial.py  0002_auto_20221105_2115.py  0003_alter_genrebook_book.py
templates/: custom_clearable_file_input.html
